--- a/web/tailwind.css
+++ b/web/tailwind.css
@@ -297,7 +297,7 @@ body {
     @apply _focusable-base;
     @apply max-h-96 max-w-[10rem];
     @apply rounded-md shadow-md;
-    @apply bg-background-lighter hover:bg-zinc-900 active:bg-zinc-800;
+    @apply hover:bg-zinc-900 active:bg-zinc-800;
   }
 
   /**
