--- a/web/pages/Chat/chat-detail.css
+++ b/web/pages/Chat/chat-detail.css
@@ -17,8 +17,12 @@
   max-height: 100dvh;
   width: 100%;
   grid-template-rows: 1fr auto;
-
   @apply gap-1 sm:gap-2;
+}
+@media (max-width: 640px) {
+  .avatar-chat-detail {
+    height: calc(100dvh - 10px);
+  }
 }
 
 @media (min-width: 1024px) {
