--- a/web/pages/Chat/chat-detail.css
+++ b/web/pages/Chat/chat-detail.css
@@ -19,9 +19,17 @@
   grid-template-rows: 1fr auto;
   @apply gap-1 sm:gap-2;
 }
+
+.chat-container {
+  min-height: 'calc(100vh - 70px)'
+}
+
 @media (max-width: 640px) {
   .avatar-chat-detail {
     height: calc(100dvh - 10px);
+  }
+  .chat-container {
+    min-height: 'calc(100vh - 120px)';
   }
 }
 
